# NesEmulator

./: .gitignore  CMakeLists.txt  NES Emulator.sln  README.md
.github/workflows/: cmake-multi-platform.yml
NES Emulator/: KeyboardController.cpp  KeyboardController.h  Main.cpp  NES Emulator.vcxproj  NES Emulator.vcxproj.filters  NesEmulator.cpp  NesEmulator.h
NES Emulator Application/: NES Emulator Application.vcxproj
NES Emulator Core/: NES Emulator Core.vcxproj  NES Emulator Core.vcxproj.filters  Nes.cpp  Nes.h
NES Emulator Core/Components/: APU.cpp  APU.h  Bus.cpp  CPU_2A03.cpp  CPU_2A03.h  Cartridge.cpp  Cartridge.h  ColorTable.cpp  Component.h  PPU_2C02.cpp  PPU_2C02.h  PersistentRAM.cpp  PersistentRAM.h  R6502.cpp  R6502.h  R6502ProcessorStatusRegister.cpp  RAM.cpp  RAM.h
NES Emulator Core/Configuration/: iNesConfiguration.cpp  iNesConfiguration.h
NES Emulator Core/Mappers/: Mapper.cpp  Mapper.h  MapperFactory.cpp  MapperFactory.h  Mapper_001.cpp
NES Emulator Core/Sound/: BlockBuffer.cpp  BlockBuffer.h  DMCChannel.h  Envelope.cpp  Envelope.h  LengthCounter.cpp  LinearCounter.h  NoiseChannel.cpp  PulseChannel.cpp  Resampler.cpp  Resampler.h  Sequencer.h  SoundDriver.h  Sweep.cpp  Sweep.h  TriangleChannel.h
NES Emulator Core/Utils/: Range.cpp  Range.h
NES Emulator/source/: KeyboardController.h  Main.cpp  MainWindow.cpp  NesEmulator.h
NesEmulator/: CMakeLists.txt
NesEmulator/source/: KeyboardController.cpp  KeyboardController.h  Main.cpp  MainWindow.h  NesEmulator.cpp  NesEmulator.h  SoundController.cpp  SoundController.h
NesEmulator/source/SoundUtils/: BlockBuffer.h
NesEmulatorCore/: CMakeLists.txt  ICpuLogger.h  IPixelWindow.h  ISoundSampleProcessor.h  Nes.cpp  Nes.h
NesEmulatorCore/Components/: APU.cpp  APU.h  Bus.cpp  Bus.h  CPU_2A03.cpp  CPU_2A03.h  Cartridge.cpp  Cartridge.h  ColorTable.h  Component.cpp  Component.h  PPU_2C02.cpp  PPU_2C02.h  R6502.cpp  R6502.h  R6502ProcessorStatusRegister.cpp  R6502ProcessorStatusRegister.h  RAM.cpp  RAM.h
NesEmulatorCore/Configuration/: iNesConfiguration.cpp  iNesConfiguration.h
NesEmulatorCore/Mappers/: MapperFactory.cpp  Mapper_000.cpp  Mapper_000.h  Mapper_001.h
NesEmulatorCore/Sound/: BlockBuffer.cpp  DMCChannel.cpp  DMCChannel.h  Envelope.h  IChannel.h  LengthCounter.h  LinearCounter.cpp  NoiseChannel.h  PulseChannel.h  Resampler.cpp  Sequencer.cpp  SoundDriver.cpp  Sweep.h  TriangleChannel.cpp  TriangleChannel.h
TestComponents/: TestComponents.cpp  TestComponents.vcxproj  TestComponents.vcxproj.filters  TestR6502.cpp
Test_Components/: CMakeLists.txt  Test_Components.cpp
Tests/: CMakeLists.txt  CpuLogger.cpp  CpuLogger.h  Test_Components.cpp
